--- a/firebase.json
+++ b/firebase.json
@@ -1,5 +1,6 @@
 {
   "firestore": {
+    "database": "(default)",
     "rules": "firestore.rules",
     "indexes": "firestore.indexes.json"
   },
@@ -22,4 +23,4 @@
       "enabled": true
     }
   }
-} 
+}
